--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- VERSION: v6.2 | UPDATED: 2025-12-18 01:40 PM | FIX: Vercel/Safari Syntax, Canvas, iOS -->
+<!-- VERSION: v6.3 | UPDATED: 2025-12-18 01:45 PM | FIX: Vercel/Safari iOS File Input + Syntax -->
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
@@ -117,7 +117,7 @@ html, body {
         YZU- Stone Studio
       </h1>
       <p class="text-[9px] text-game-muted font-mono mt-0.5">
-        SYSTEM ONLINE // v6.2 DEPLOY
+        SYSTEM ONLINE // v6.3 DEPLOY
       </p>
     </div>
     <div class="flex items-center gap-1" id="progress-bar">
@@ -134,20 +134,27 @@ html, body {
       <!-- STEP 1: UPLOAD -->
       <div id="step-upload" class="step-section active justify-center items-center h-full">
         <div
-          class="flex flex-col items-center justify-center w-full h-full border-2 border-dashed border-game-primary/30 rounded-xl p-4 text-center bg-game-surface/20 hover:bg-game-surface/40 cursor-pointer transition-colors"
-          onclick="document.getElementById('file-input').click()"
+          class="flex flex-col items-center justify-center w-full h-full border-2 border-dashed border-game-primary/30 rounded-xl p-4 text-center bg-game-surface/20 hover:bg-game-surface/40 transition-colors relative"
         >
           <div class="w-16 h-16 mb-4 flex items-center justify-center border-2 border-game-primary rounded-xl shadow-neon">
             <i data-lucide="scan-line" class="w-8 h-8 text-game-primary"></i>
           </div>
           <h2 class="text-xl font-bold mb-1 font-[Rajdhani]">INITIALIZE UPLOAD</h2>
-          <!-- iOS Safari 相容：不要 display:none，用 hidden class 即可 -->
-          <input type="file" id="file-input" accept="image/*" class="hidden">
-          <button
-            class="font-bold py-2 px-6 rounded-lg bg-game-primary text-black flex items-center gap-2 mt-2 hover:bg-cyan-400 transition-colors"
-          >
-            <i data-lucide="upload" class="w-4 h-4"></i> SELECT FILE
-          </button>
+          <!-- 透明 input 疊在按鈕上，iOS 會認為是直接點 input -->
+          <div class="relative mt-2">
+            <button
+              type="button"
+              class="font-bold py-2 px-6 rounded-lg bg-game-primary text-black flex items-center gap-2 hover:bg-cyan-400 transition-colors"
+            >
+              <i data-lucide="upload" class="w-4 h-4"></i> SELECT FILE
+            </button>
+            <input
+              type="file"
+              id="file-input"
+              accept="image/*"
+              class="absolute inset-0 w-full h-full opacity-0 cursor-pointer"
+            >
+          </div>
         </div>
       </div>
       <!-- STEP 2: CROP -->
@@ -370,7 +377,7 @@ window.App = {
       autoCropArea: 0.9,
       background: false,
       responsive: true,
-      checkCrossOrigin: false,   // 避免本地圖片被誤判跨域
+      checkCrossOrigin: false,
       checkOrientation: false
     });
   },
@@ -380,11 +387,10 @@ window.App = {
       this.state.cropper = null;
     }
   },
-  // 加入 maxWidth/maxHeight 以提高 iOS Safari 穩定性
   confirmCrop: function() {
     if (!this.state.cropper) return;
     const data = this.state.cropper.getImageData();
-    const maxSide = 4096; // 可視需求調整
+    const maxSide = 4096;
     let targetWidth = data.naturalWidth;
     let targetHeight = data.naturalHeight;
     if (targetWidth > targetHeight && targetWidth > maxSide) {
@@ -450,4 +456,137 @@ window.App = {
     const container = document.getElementById('finetune-container');
     if (!ol || !container) return;
     ol.innerHTML = '';
-    this.state.vLines.forEach((pos
+    this.state.vLines.forEach((pos, i) => {
+      const el = document.createElement('div');
+      el.className = 'drag-line-v';
+      el.style.left = pos + '%';
+      el.onmousedown = (e) => this.handleDragStart(e, 'v', i);
+      el.ontouchstart = (e) => this.handleDragStart(e, 'v', i);
+      ol.appendChild(el);
+    });
+    this.state.hLines.forEach((pos, i) => {
+      const el = document.createElement('div');
+      el.className = 'drag-line-h';
+      el.style.top = pos + '%';
+      el.onmousedown = (e) => this.handleDragStart(e, 'h', i);
+      el.ontouchstart = (e) => this.handleDragStart(e, 'h', i);
+      ol.appendChild(el);
+    });
+  },
+  handleDragStart: function(e, type, i) {
+    e.preventDefault();
+    this.state.dragging = { type, i };
+  },
+  handleDragMove: function(e) {
+    if (!this.state.dragging) return;
+    e.preventDefault();
+    const container = document.getElementById('finetune-container');
+    if (!container) return;
+    const rect = container.getBoundingClientRect();
+    let cx = e.clientX;
+    let cy = e.clientY;
+    if (e.touches && e.touches[0]) {
+      cx = e.touches[0].clientX;
+      cy = e.touches[0].clientY;
+    }
+    let pct;
+    if (this.state.dragging.type === 'v') {
+      pct = ((cx - rect.left) / rect.width) * 100;
+    } else {
+      pct = ((cy - rect.top) / rect.height) * 100;
+    }
+    pct = Math.max(0, Math.min(100, pct));
+    if (this.state.dragging.type === 'v') {
+      this.state.vLines[this.state.dragging.i] = pct;
+    } else {
+      this.state.hLines[this.state.dragging.i] = pct;
+    }
+    this.renderFineTuneLines();
+  },
+  handleDragEnd: function() {
+    if (this.state.dragging) {
+      this.state.dragging = null;
+      this.state.vLines.sort((a, b) => a - b);
+      this.state.hLines.sort((a, b) => a - b);
+      this.renderFineTuneLines();
+    }
+  },
+  processSplit: function() {
+    const cvs = this.state.croppedCanvas;
+    if (!cvs) return;
+    const w = cvs.width;
+    const h = cvs.height;
+    const xc = [0, ...this.state.vLines.map(p => (p / 100) * w), w];
+    const yc = [0, ...this.state.hLines.map(p => (p / 100) * h), h];
+    this.state.results = [];
+    for (let r = 0; r < yc.length - 1; r++) {
+      for (let c = 0; c < xc.length - 1; c++) {
+        const cell = document.createElement('canvas');
+        const cw = xc[c + 1] - xc[c];
+        const ch = yc[r + 1] - yc[r];
+        if (cw > 0 && ch > 0) {
+          cell.width = cw;
+          cell.height = ch;
+          const ctx = cell.getContext('2d');
+          ctx.drawImage(cvs, xc[c], yc[r], cw, ch, 0, 0, cw, ch);
+          this.state.results.push({
+            id: img-${r}-${c},
+            dataUrl: cell.toDataURL('image/jpeg', 0.95),
+            filename: part_${r + 1}_${c + 1}.jpg
+          });
+        }
+      }
+    }
+    this.setStep(5);
+  },
+  renderResults: function() {
+    const c = document.getElementById('results-container');
+    if (!c) return;
+    c.innerHTML = '';
+    this.state.results.forEach(it => {
+      const d = document.createElement('div');
+      d.className = 'bg-game-surface p-1 rounded relative group';
+      d.innerHTML = `
+        <img src="${it.dataUrl}" class="w-full h-auto rounded-sm border border-game-primary/20">
+        <a href="${it.dataUrl}" download="${it.filename}"
+          class="absolute top-2 right-2 bg-game-primary p-1 rounded opacity-0 group-hover:opacity-100 transition-opacity">
+          <i data-lucide="download" class="w-3 h-3 text-black"></i>
+        </a>
+      `;
+      c.appendChild(d);
+    });
+    try { lucide.createIcons(); } catch (e) {}
+  },
+  downloadZip: function() {
+    if (!this.state.results.length) return;
+    const zip = new JSZip();
+    const f = zip.folder('Stone_Studio_Grid');
+    this.state.results.forEach(it => {
+      const base64Data = it.dataUrl.split(',')[1] || '';
+      f.file(it.filename, base64Data, { base64: true });
+    });
+    zip.generateAsync({ type: 'blob' }).then(content => {
+      const link = document.createElement('a');
+      link.href = URL.createObjectURL(content);
+      link.download = 'Stone_Studio_Pack.zip';
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
+    });
+  },
+  reset: function() {
+    this.state.step = 1;
+    this.state.originalImage = null;
+    this.state.croppedCanvas = null;
+    this.state.results = [];
+    this.state.rows = 2;
+    this.state.cols = 2;
+    this.state.vLines = [];
+    this.state.hLines = [];
+    this.renderStep();
+  }
+};
+document.addEventListener('DOMContentLoaded', () => window.App.init());
+</script>
+</body>
+</html>
